Directly execute console command
Fixes #5